--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "metalsmith-layouts": "^2.1.0",
     "metalsmith-markdown": "^0.2.2",
     "metalsmith-paths": "^3.0.1",
+    "metalsmith-permalinks": "^0.5.0",
     "spectre.css": "^0.5.0"
   }
 }
